<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#33b5e5"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Main" >

    <EditText
        android:id="@+id/money"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="3"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/dollarLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/money"
        android:layout_toRightOf="@+id/money"
        android:text="@string/dollar" />

    <TextView
        android:id="@+id/TextView03"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/poundsLabel"
        android:layout_toRightOf="@+id/poundsLabel"
        android:text="@string/pounds" />

    <EditText
        android:id="@+id/poundsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/diaxorLabel"
        android:layout_toRightOf="@+id/diaxorLabel"
        android:ems="3"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/diaxorLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/dollarLabel"
        android:layout_alignBottom="@+id/dollarLabel"
        android:layout_toRightOf="@+id/dollarLabel"
        android:text="@string/diaxor"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/apotelesmaeurokilo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/money"
        android:layout_below="@+id/money"
        android:layout_marginTop="17dp"
        android:text="@string/apotelesma1"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/tiketa1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/apotelesmaeurokilo"
        android:layout_alignBottom="@+id/apotelesmaeurokilo"
        android:layout_toRightOf="@+id/money"
        android:text="@string/ettik1"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>